stylesheets/application.css
/* ... */
.wiki .actu-header .logo {
    order: 1;
}
.wiki .actu-header .subtitle {
  color: #293133;
  text-align: left;
  margin: auto 0;
  padding-left: 10px;
  font-size: 18px;
  order: 2;
}
.wiki .actu-header .dynamic-subtitle {
  color: #808080;
  font-size: 15px;
}

/* Code / Preformatted */
p > code, li > code { color:#222; background-color:#fafafa; padding:1px 2px; border:1px solid #e2e2e2; }

/* Repo */
.revision-graph { margin-top:4px; }

/* Sidebar */
#sidebar h3 { display: block; background-color: #edf3fe; border-bottom: 1px solid #ccc; color: #444;
              font-size: 13px; margin: 10px -8px 5px -8px; padding:4px 8px; font-weight: bold; text-shadow:1px 1px 2px #fff; }
#sidebar #watchers { margin-top:10px; }
#sidebar h3:first-child, #sidebar div:first-child+h3 { margin-top:0; }
#sidebar h4 { margin:4px 0 2px 0; font-size:12px; font-weight:bold; color:#555; text-shadow:1px 1px 2px #fff; }
#sidebar p { margin:3px 2px; }
#sidebar .subsection { padding-left:10px; }
#admin-menu a {display:inline-block;line-height:1.4em;padding-top: 2px;padding-bottom: 3px;}
#admin-menu a.selected { background-color:#5a6695; background-position:6px center; display:inline-block; padding:2px 7px 2px 26px !important; margin-left:-8px; margin-right:20px; color:#fff; border-radius:4px; box-shadow: inset 0 0 1px #bbbbf5; line-height:19px; }
#sidebar a.selected { background-color:#5a6695; padding:1px 6px 2px 5px; margin-left:-5px; color:#fff; border-radius:4px; box-shadow: inset 0 0 1px #bbbbf5; }
#sidebar select#user_id {max-width: 100%;}

/* Modals */
div.modal { border:2px solid #73c448; padding:0; }
div.modal h3.title { background-color:#73c448; padding:4px 10px; border-top-left-radius:1px; border-top-right-radius:1px; }
.ui-corner-all, .ui-corner-bottom, .ui-corner-right, .ui-corner-br { -moz-border-radius-bottomright: 0; -webkit-border-bottom-right-radius: 0; -khtml-border-bottom-right-radius: 0; border-bottom-right-radius: 0; }
.ui-corner-all, .ui-corner-bottom, .ui-corner-left, .ui-corner-bl { -moz-border-radius-bottomleft: 0; -webkit-border-bottom-left-radius: 0; -khtml-border-bottom-left-radius: 0; border-bottom-left-radius: 0; }
.ui-corner-all, .ui-corner-top, .ui-corner-right, .ui-corner-tr { -moz-border-radius-topright: 0; -webkit-border-top-right-radius: 0; -khtml-border-top-right-radius: 0; border-top-right-radius: 0; }
.ui-corner-all, .ui-corner-top, .ui-corner-left, .ui-corner-tl { -moz-border-radius-topleft: 0; -webkit-border-top-left-radius: 0; -khtml-border-top-left-radius: 0; border-top-left-radius: 0; }
.ui-widget-header, div.ui-widget-header { border: 1px solid #73c448; background: #73c448; color: white; }

/* Menu */
#main-menu { left:108px; padding:0; margin:0; }
#main-menu li a { color:#fff; background-color:#229e43; font-weight:normal; margin:0 1px; padding-bottom:8px; }
#main-menu li a.settings {background-color:transparent;}
#main-menu li a:hover { color:#fff; background:#20ad46; text-decoration:none; }
#main-menu li a.selected, #main-menu li a.selected:hover {
  /* following lines taken from basecamphq directly. Thanks 37signals!! */
  background:#eeeeee;
  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#fdfdfd', endColorstr='#eeeeee'); /* IE */
  background:-webkit-gradient(linear, left top, left bottom, from(#fdfdfd), to(#eeeeee)); /* webkit */
  background:-moz-linear-gradient(top,  #fdfdfd,  #eeeeee); /* firefox 3.6+ */
  color:#222222; font-weight:bold; margin:0 1px; padding-bottom:8px; text-decoration:none;
}
#main-menu .menu-children {
  border-right: 1px solid #229e43;
  border-bottom: 1px solid #229e43;
  border-left: 1px solid #229e43;
}
#main-menu li a.new-object { background-color: #229e43;}
#main-menu .menu-children li a:hover {color: #fff; background-color: #229e43;}

/* Quick-search box */
#quick-search { color:#73c448; }
#quick-search label { display:none; }
#quick-search input#q { border:1px solid #aaa; padding:3px 20px 3px 3px; border-radius:3px; box-sizing:border-box;
                        background:#fff url(../images/search.png) no-repeat right center; }
#project-jump .drdn-items > a:hover { background-color: #229e43; }

/* Tabs / Settings */
#content .tabs ul { border-bottom:2px solid #e9e9e9; }
#content .tabs ul li { margin-right:2px; }
#content .tabs ul li a { border:0; border-bottom:1px solid #e9e9e9; font-weight:normal; background-color:#f5f5f5; }
#content .tabs ul li a:hover { color:#222; background-color:#e9e9e9; }
#content .tabs ul li a.selected, #content .tabs ul li a.selected:hover { color:#222; border:0; background:#e9e9e9; font-weight:bold; }
fieldset legend { font-weight:bold; }
.permissions_tab fieldset + fieldset { margin-top:10px; }
.permissions_tab fieldset legend { font-size:110%; }
#content .jstTabs.tabs {margin-bottom: 3px !important;}
#content .jstTabs.tabs li {height: auto !important;}

/* Tables */
table.list { border:none; }
table.list td, table.list th { padding:6px 5px; }
table.list th { vertical-align:top; background-color:#E8E8E8; border-bottom:1px solid #e9e9eb; font-weight:normal; }
table.list tbody tr:hover { background-color:#edf3fe; }
.odd, .odd+.even-odd-linked { background-color:#fff; }
.even, .even+.even-odd-linked { background-color:#f6f7f8; }
table.list th .filter { margin:3px 0 2px; padding:1px 3px; width:100%; max-width:240px; box-sizing:border-box; border-radius:2px; border:1px solid #ccc; height:19px; color:#555; }
table.list th .filter:focus { outline:none; }

/* Forms */
.tabular label { line-height:2em; }

form#issue-form input[type='submit'] {
  background-color: #229e43;
  color: #f9ffef;
}
form#issue-form input[type='submit']:hover, form#issue-form input[type='submit']:focus {
  background-color: #20ad46;
  color:#fff;
}

form#issue-form {
  display: block;
  max-width: 1280px;
  margin-left: auto;
  margin-right: auto;
}

/* Issues */
div.issue div.subject h3 { color:#000; font-weight:bold; margin:4px 6px; }
div.issue p.author { font-style:italic; margin:3px 0 12px 4px; }
/* ... */

